# ArtificialEyes

C program/: 9_stereo_calib.yml  CMakeLists.txt  ObstacleDetectionAlgorithm.h  StereoVisionBasedDisparityMap.h  cleanfile.sh  gpioback.cpp  uploadimage.sh
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/example/munkit/artificialeyes/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/munkit/artificialeyes/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/munkit/artificialeyes/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
